# 02-task-management-app

./: .gitignore  FRONTEND_PLAN.md  MIGRATION_PLAN.md  ONBOARDING.md  POSTGRESQL_PLAN.md  README.md  SWAGGER_ANALYSIS.md  docker-compose.yml  package-lock.json  package.json
.github/: copilot-instructions.md
client/: components.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.mjs
client/src/: App.css  App.tsx  index.tsx
client/src/api/: client.ts
client/src/components/: AddListForm.tsx  AuthScreen.tsx  CardItem.tsx  CreateBoardModal.tsx  ListColumn.tsx
client/src/dnd/: DragDropContext.tsx  Draggable.tsx  Droppable.tsx  index.ts  types.ts
client/src/lib/: utils.ts
server/: .env.development  .env.template  .gitignore  Cargo.toml  README.md  package-lock.json  package.json  prisma.config.d.ts.map  prisma.config.js  prisma.config.js.map  prisma.config.ts  setup_db.sql  test-prisma.js  tsconfig.json
server/prisma/: schema.prisma
server/prisma/migrations/1_init/: migration.sql
server/prisma/migrations/20260209215655_add_columns_and_cards/: migration.sql
server/src/: db.rs  errors.rs  index.ts  main.rs  openapi.ts
server/src/controllers/: boardController.ts  cardController.ts
server/src/handlers/: auth.rs  boards.rs  cards.rs  columns.rs  columns_bulk.rs  mod.rs
server/src/mappers/: boardMapper.ts
server/src/models/: board.rs  card.rs  column.rs  mod.rs  types.ts  user.rs
server/src/repositories/: boardsRepository.ts
server/src/routes/: auth.rs  boards.rs  boards.ts  cards.rs  cards.ts  columns.rs  mod.rs
(+13 files in other folders)
